--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,9 @@
 body {
   background: #eee;
+  overflow-y: scroll;
 }
 .content-wrapper {
+  margin-top: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -30,6 +32,7 @@ body {
   min-width: 350px;
   min-height: 150px;
   max-height: 287px;
+  max-width: 100%;
   overflow-y: auto;
 }
 .output {
@@ -39,7 +42,7 @@ body {
   padding: 1rem;
   min-height: 118px;
   max-height: 300px;
-  min-width: 350px;
+  width: 350px;
   overflow-y: auto;
 }
 .errs {
@@ -48,10 +51,10 @@ body {
 }
 .errs .errMsg {
   overflow-y: auto;
-  color: #ee82ee;
+  color: #b00000;
 }
 button {
-  padding: 1rem;
+  padding: 0.5rem;
   margin: 1rem;
   width: 5rem;
   border-radius: 5px;
