--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,9 @@
 body
   background #eee
+  overflow-y scroll
+
 .content-wrapper
+  margin-top 100px
   display flex
   flex-direction row
   justify-content space-around
@@ -30,6 +33,7 @@ body
   min-width 350px
   min-height 150px
   max-height 287px
+  max-width 100%
   overflow-y auto
 
 .output
@@ -39,7 +43,7 @@ body
   padding 1rem
   min-height 118px
   max-height 300px
-  min-width 350px
+  width 350px
   overflow-y auto
 
 .errs
@@ -47,10 +51,10 @@ body
   height 100%
   .errMsg
     overflow-y auto
-    color violet
+    color lighten(darkred, 10%)
 
 button
-  padding 1rem
+  padding 0.5rem
   margin 1rem
   width 5rem
   border-radius 5px
