--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,18 @@
 extends layout
 
 block content
-  .repl-container(ng-controller="mainCtrl")
+  .repl-container(ng-controller='mainCtrl')
     .title-header
       h1 Knex Repl
-      p Write some knex query code. The knex instance is available as a variable called knex.
+      p Write some #[a(href='http://knexjs.org' target='_new') knex] query code.
+        |   The knex instance is available as a variable called knex.
 
     .bttns
-      button(ng-click='clear()') Clear
+      .fake-a.warn(ng-click='clear()') Clear
+      .fake-a(ng-show='!selectingTheme' ng-click='selectingTheme=!selectingTheme') Theme
+      select(ng-show='selectingTheme' ng-model='currentTheme' ng-change='setTheme()')
+        option(ng-repeat="theme in themes" value="{{theme}}") {{theme}}
+      .fake-a(ng-show='selectingTheme' ng-click='selectingTheme=!selectingTheme') Ok
 
     .editor-area
       div.code.js(id='editor' ng-model='input')
