--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -33,10 +33,8 @@ body
 
 .code
   flex 1 1 auto
-  min-width 350px
-  min-height 150px
-  max-height 287px
-  max-width 100%
+  min-width 100%
+  min-height 450px
   overflow-y auto
 
 .output
@@ -51,7 +49,6 @@ body
 
 .errs
   flex 1 1 auto
-  height 100%
   .errMsg
     overflow-y auto
     color lighten(darkred, 10%)
