--- a/views/index.jade
+++ b/views/index.jade
@@ -2,10 +2,6 @@ extends layout
 
 block content
   .repl-container(ng-controller='mainCtrl')
-    .title-header
-      h1 Knex Repl
-      p Write some #[a(href='http://knexjs.org' target='_new') knex] query code.
-        |   The knex instance is available as a variable called knex.
 
     .bttns
       .fake-a.warn(ng-click='clear()') Clear
@@ -18,8 +14,8 @@ block content
 
     .editor-area
       div.code.js(id='editor' ng-model='input')
-      pre.output.sql(ng-model='output') {{ output }}
-
-
-    .errs
-      .errMsg(ng-show="error" ng-bind-html="error | to_trusted")
+      pre.output.sql(
+        ng-class="{errMsg: error}"
+        ng-bind-html="error ? error : output | to_trusted"
+        ng-model='output'
+      )
