adding localStorage saving of theme selection

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet' href='/stylesheets/style.css')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js')
+    script(type="text/javascript", src="https://cdn.jsdelivr.net/ngstorage/0.3.6/ngStorage.min.js")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.6.0/clipboard.min.js')
     script(src="js/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8")
     script(src='js/app.js')
