adding open graph metas

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title='knex-repl'
+    meta(property="og:title" content="Knex Repl")
+    meta(property="og:type" content="website")
+    meta(property="og:url" content="http://knex.wko.io")
+    meta(property="og:image" content="http://knexjs.org/assets/images/knex.png")
     link(rel='stylesheet' href='/stylesheets/style.css')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js')
