adding server disconnect banner

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -75,3 +75,18 @@ body
 
 .fake-a.warn
   color lighten(darkred, 50%)
+
+.connection-issue-banner
+  position fixed
+  left 8px
+  right 8px
+  bottom 8px
+  background lighten(darkred, 40%)
+  color lighten(lightgrey, 40%)
+  display flex
+  flex-direction row
+  justify-content flex-start
+  opacity 0.85
+  z-index 9000
+  p
+    padding 0px 75px
